recursion.cons.lessons.recursion.cons.Length.scala.error
length:3: error: missing arguments for method length in class length;
follow this method with `_' if you want to treat it as a partially applied function
	for(i<- 0 to length-1) {
                     ^